@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+3/20/05: IMOD_3-5-2
+3/20/05: Updated tomography and installation guides.
+
 3/11/05: Added nad_eed_3d, Frangakis and Hegerl's edge-enhancing anisotropic 
 diffusion program.
 
